2014-11-25 Irvin Teh <irvin@well.ox.ac.uk>

	* matlab/FiltersToolbox/imagesc_nD: (0.1.0)

	- Minor formatting fix to imagesc_nD.m

2014-11-25  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri2sphrad.m: (0.1.0)

	- TRI2SPHRAD Estimate radius of sphere with same area as
	triangular mesh.

2014-11-23  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/smacof.m: (0.1.1)
	* matlab/PointsToolbox/cons_smacof_pip.m: (0.4.3)
	* matlab/ManifoldToolbox/tri_sphparam.m: (0.4.6)

	- Fix bug. To compute stress we were adding all the terms in the
	distance matrix instead of only the upper triangular half.

2014-11-21  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/CardiacToolbox/fit_DT.m: (0.1.2)

	- Fixed minor bug, program crashed without all output arguments.

	* Add matlab/FiltersToolbox/forward_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_mex.cpp: (0.1.1)

	- Functions to do forward/inverse total variation transforms, very
	common in reconstruction algorithms as a spatial
	regulariser. Essentially just finite differences in x, y, and z.

2014-11-07  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_blockface_manual_correction.m: (0.1.0)

	- HISTOLOGY_BLOCKFACE_MANUAL_CORRECTION Manual landmark correction
	of 3D histology volume to match blockface volume.

2014-11-05  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_blockface_reg.m: (0.1.0)

	- HISTOLOGY_BLOCKFACE_REG Register deformed histology volume to
	blockface.

2014-11-05  Jo Bates <jobates81@gmail.com>

	* Add smoldyn2matlab(0.1.0)

	- converts Smoldyn molecule trajectory into Matlab format

2014-11-05  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add matlab/ThirdPartyToolbox/loaddcmdir.m,
	* Add matlab/ThirdPartyToolbox/license-loaddcmdir.txt:
